--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,14 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                "node_modules/alertifyjs/build/css/alertify.min.css",
+           "node_modules/alertifyjs/build/css/themes/default.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js",
+               "node_modules/highcharts/highcharts.js"
+            ]
           },
           "configurations": {
             "production": {
