--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@swimlane/ngx-charts": "^22.0.0-alpha.0",
+    "alertifyjs": "^1.14.0",
+    "angular-highcharts": "^17.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.8",
     "dotenv": "^16.4.7",
+    "highcharts": "^12.1.2",
+    "highcharts-angular": "^4.0.1",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
