--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.1.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@swimlane/ngx-charts": "^22.0.0-alpha.0",
+    "@types/sweetalert": "^1.1.28",
     "alertifyjs": "^1.14.0",
     "angular-highcharts": "^17.0.1",
     "bootstrap": "^5.3.3",
@@ -32,6 +33,8 @@
     "highcharts-angular": "^4.0.1",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
