--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css",
-              "node_modules/alertifyjs/build/css/alertify.min.css"
+              "node_modules/alertifyjs/build/css/alertify.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
 
             ],
             "scripts": [
