--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "dotenv": "^16.4.7",
     "highcharts": "^12.1.2",
     "highcharts-angular": "^4.0.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "sweetalert": "^2.1.2",
