--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "angular-highcharts": "^17.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "canvg": "^4.0.3",
     "chart.js": "^4.4.8",
+    "core-js": "^3.41.0",
     "dotenv": "^16.4.7",
     "highcharts": "^12.1.2",
     "highcharts-angular": "^4.0.1",
